Fix divider alignment, wrap dividers in <span> with className defined

--- a/src/DatePicker.less
+++ b/src/DatePicker.less
@@ -17,11 +17,10 @@
       flex-grow: 1;
       display: flex;
       padding: 0 2px;
+      align-items: baseline;
 
-      form {
-        display: flex;
-        align-items: baseline;
-        height: 100%;
+      &__divider {
+        padding: 1px 0;
       }
 
       input {
